Trying to fix dark mode

--- a/forms/success.css
+++ b/forms/success.css
@@ -12,7 +12,6 @@
     font-size: 20px;
     border-radius: 50%;
     border: 8px solid #96df8f;
-    background-color: #fff;
     position: relative;
     overflow: hidden;
     transform-origin: center;
